--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,21 @@
 body {
   display: flex;
-  flex-direction: column;
-  place-items: center;
+  justify-content: center;
+  flex-direction: row;
+  align-items: flex-start;
   min-width: 320px;
   min-height: 95vh;
+}
+
+.root {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  min-height: 100%;
+  padding: 1rem;
+  background-color: #f0f0f0;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
