--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,16 @@
+a {
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+    border-radius: 5px;
+}
+
 a.tab {
     margin: 2px;
+}
+
+a.active {
+    background-color: lightslategray;
+    font-weight: bolder;
+    color: white;
 }
