--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,21 @@ body {
   border-radius: 0.5rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.notification {
+  text-decoration: none;
+  padding-right: 20px;
+  padding-top: 6px;
+  position: relative;
+  display: inline-block;
+}
+
+.notification .badge {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  padding: 5px 10px;
+  border-radius: 50%;
+  background: red;
+  color: white;
+}
